--- a/src/app/Pages/home-template/_components/navbar/navbar.component.html
+++ b/src/app/Pages/home-template/_components/navbar/navbar.component.html
@@ -14,6 +14,9 @@
             <li class="nav-item">
                 <a class="nav-link" routerLink="/list-course" routerLinkActive="active">List course</a>
             </li>
+            <li class="nav-item">
+                <a class="register" routerLink="/register" routerLinkActive="active">Register</a>
+            </li>
 
         </ul>
         <form class="form-inline my-2 my-lg-0">
