--- a/src/app/Pages/admin-template/dashboard/dashboard.component.html
+++ b/src/app/Pages/admin-template/dashboard/dashboard.component.html
@@ -1,1 +1,50 @@
-<p>dashboard works!</p>
+<div class="container">
+    <h3>Add user</h3>
+    <div class="row">
+        <div class="col-md-12">
+            <form #addUserForm="ngForm" (ngSubmit)="addUser(addUserForm.value)">
+                <div class="form-group">
+                    <label>Tài Khoản</label>
+                    <input type="text" name="taiKhoan" class="form-control" ngModel required #TaiKhoan="ngModel"
+                        minlength="7" maxlength="15" />
+                    <div class="alert alert-danger" *ngIf="TaiKhoan.errors && (TaiKhoan.dirty || TaiKhoan.touched)">
+                        <!-- Kiểm tra rỗng -->
+                        <div *ngIf="TaiKhoan.errors.required">Tài khoản k dc rỗng</div>
+
+                        <!-- Kiểm tra độ dài ký tự -->
+                        <div *ngIf="TaiKhoan.errors.minlength || TaiKhoan.errors.maxlength">
+                            độ dài ký tự 7 - 15
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label>Mật khẩu</label>
+                    <input type="text" name="matKhau" class="form-control" ngModel />
+                </div>
+                <div class="form-group">
+                    <label>Email</label>
+                    <input type="text" name="email" class="form-control" ngModel required #Email="ngModel"
+                        pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" />
+                    <div class="alert alert-danger" *ngIf="Email.errors && (Email.dirty || Email.touched)">
+                        <!-- Kiem tra rong -->
+                        <div *ngIf="Email.errors.required">Vui long nhap Email!</div>
+                        <!-- Kiem tra dinh dang Email -->
+                        <div *ngIf="Email.errors.pattern">Email k dung dinh dang</div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label>Họ tên</label>
+                    <input type="text" name="hoTen" class="form-control" ngModel />
+                </div>
+                <div class="form-group">
+                    <label>SDT</label>
+                    <input type="text" name="soDT" class="form-control" ngModel />
+                </div>
+
+                <button class="btn btn-success" [disabled]="!addUserForm.valid">
+                    Add User
+                </button>
+            </form>
+        </div>
+    </div>
+</div>
