--- a/src/app/Pages/home-template/list-course/course/course.component.html
+++ b/src/app/Pages/home-template/list-course/course/course.component.html
@@ -1,15 +1,17 @@
 <div class="card">
-    <img class="card-img-top" [src]="course.hinhAnh" alt="" />
-    <div class="card-body">
-        <h4 class="card-title">{{ course.tenKhoaHoc }}</h4>
+  <img class="card-img-top" [src]="course.hinhAnh" alt="" />
+  <div class="card-body">
+    <h4 class="card-title">{{ course.tenKhoaHoc }}</h4>
 
-        <!-- Truyen 1 param -->
-        <!-- <a class="btn btn-success" routerLink="/detail/{{ course.maKhoaHoc }}"
+    <!-- Truyen 1 param -->
+    <!-- <a class="btn btn-success" routerLink="/detail/{{ course.maKhoaHoc }}"
         >Detail</a
       > -->
 
-        <!-- Truyen nhieu params -->
-        <a class="btn btn-success" routerLink="/detail/{{ course.maKhoaHoc }}"
-            [queryParams]="{ tenKhoaHoc: course.tenKhoaHoc, biDanh: course.biDanh }">Detail</a>
-    </div>
+    <!-- Truyen nhieu params -->
+    <a class="btn btn-success" routerLink="/detail/{{ course.maKhoaHoc }}"
+      [queryParams]="{ tenKhoaHoc: course.tenKhoaHoc, biDanh: course.biDanh }">Detail</a>
+    <button class="btn btn-danger mx-2" data-toggle="modal" data-target="#modelId" (click)=(xemNhanh())>Xem
+      nhanh</button>
+  </div>
 </div>
