--- a/src/app/Pages/home-template/list-course/list-course.component.html
+++ b/src/app/Pages/home-template/list-course/list-course.component.html
@@ -1,3 +1,5 @@
+<app-button></app-button>
+
 <div class="container">
     <div class="row">
         <ng-container *ngIf="listCourse">
@@ -8,3 +10,4 @@
         </ng-container>
     </div>
 </div>
+<app-popup></app-popup>
