--- a/src/app/Pages/home-template/home/home.component.html
+++ b/src/app/Pages/home-template/home/home.component.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+<h3>Pipes</h3>
+<p>{{info | uppercase}}</p>
+<p>{{info | lowercase}}</p>
+<div>{{people | json}}</div>
+<div>{{array | slice: 1:5}}</div>
+<div>{{number | percent}}</div>
+
+<input type="text" [(ngModel)]="inputValue" />
+<app-child-home [data]="inputValue"></app-child-home>
+
+<app-button></app-button>
+<mat-checkbox class="example-margin">Check me!</mat-checkbox>
